--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ header{
 }
 
 .box1{
-  background-color: #525252;
+  background-color: #8FB8DE;
   padding: 20px;
   margin-top: 150px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -52,7 +52,7 @@ header{
 
 .form {
   padding: 50px 50px;
-  background-color:#a5a2a2;
+  background-color:#CDF7F6;
   display:flex;
   flex-direction: column;
   gap:15px;
@@ -69,7 +69,7 @@ header{
 
 .form label {
   font-size: 16px;
-  color:#8c52a5;
+  color:black;
 }
 
 .form input {
@@ -83,7 +83,7 @@ header{
 
 .form input:hover,
 .form input:focus {
-  border-color: #8c52a5;
+  border-color: #8FB8DE;
 }
 
 .form textarea{
@@ -93,7 +93,7 @@ header{
 .form button {
   width: 100%;
   padding: 12px 25px;
-  background: linear-gradient(to right, #8c52a5, #8d91c7);
+  background:#8fb8de;
   color: black;
   border: none;
   border-radius: 5px;
@@ -103,7 +103,7 @@ header{
 }
 
 .form button:hover {
-  background:#8c52a5;
+  background:#9a94bc;
   color:black;
 }
 
@@ -261,7 +261,7 @@ header {
   }
 
   .box1{
-    background-color:#525252;
+    background-color:#8fb8de;
     padding: 20px;
     margin-top: 100px;
     box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
@@ -277,7 +277,7 @@ header {
 
   .form{
     padding: 20px;
-    background-color:#a5a2a2;
+    background-color:#cdf7f6;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -294,7 +294,7 @@ header {
   .form button{
     width:100%;
     padding: 12px 25px;
-    background: linear-gradient(to right, #8c52a5, #8d91c7);
+    background: #8fb8de;
     color: black;
     border: none;
     border-radius: 5px;
@@ -303,13 +303,13 @@ header {
   }
 
   .form button:hover{
-    background:#8c52a5;
+    background:#9a94bc;
     color:black;
 }
 
 .form label{
   font-size: 16px;
-  color:#8c52a5;
+  color:black;
   display:block;
   width: 100%
 }
