--- a/css/styles.css
+++ b/css/styles.css
@@ -118,108 +118,116 @@ footer p{
 }
 
 @font-face {
-  font-family: "responsivenav";
-  src: url("../icons/responsivenav.eot");
-  src: url("../icons/responsivenav.eot?#iefix") format("embedded-opentype"),
-    url("../icons/responsivenav.ttf") format("truetype"),
-    url("../icons/responsivenav.woff") format("woff"),
-    url("../icons/responsivenav.svg#responsivenav") format("svg");
-  font-weight: normal;
-  font-style: normal;
+    font-family: "responsivenav";
+    src: url("../icons/responsivenav.eot");
+    src: url("../icons/responsivenav.eot?#iefix") format("embedded-opentype"),
+        url("../icons/responsivenav.ttf") format("truetype"),
+        url("../icons/responsivenav.woff") format("woff"),
+        url("../icons/responsivenav.svg#responsivenav") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
 
 .nav-toggle {
-  text-decoration: none;
-  text-indent: -300px;
-  position: relative;
-  overflow: hidden;
-  width: 60px;
-  height: 55px;
-  float: right;
+    text-decoration: none;
+    text-indent: -300px;
+    position: relative;
+    overflow: hidden;
+    width: 60px;
+    height: 55px;
+    float: right;
 }
 
 .nav-toggle:before {
-  color: black; 
-  font: normal 28px/55px "responsivenav"; 
-  text-transform: none;
-  text-align: center;
-  position: absolute;
-  content: "\2261"; 
-  text-indent: 0;
-  width: 100%;
-  left: 0;
-  top: 0;
+    color: black;
+    font: normal 28px/55px "responsivenav";
+    text-transform: none;
+    text-align: center;
+    position: absolute;
+    content: "\2261";
+    text-indent: 0;
+    width: 100%;
+    left: 0;
+    top: 0;
 }
 
 .nav-toggle.active:before {
-  font-size: 24px;
-  content: "\78"; 
+    font-size: 24px;
+    content: "\2718";
+}
+
+.nav-container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: flex-end;
+    height: 100%;
+}
+
+.nav-collapse {
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .nav-collapse ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-  flex-direction: column;
-  align-items: flex-end;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    align-items: flex-end;
+    width: auto;
 }
 
 .nav-collapse li {
+    display: block;
+}
 
-  display: block;
+.nav-collapse a {
+    text-decoration: none;
+    padding: 0.7em 1em;
+    color: black;
+    width: 100%;
+    display: block;
+    font-size: .7em;
+}
+
+.nav-collapse ul ul a {
+    padding-left: 2em;
+}
+
+.nav-collapse .menu-item a:hover,
+.nav-collapse .menu-item a:focus {
+    text-decoration: underline;
 }
 
 .js .nav-collapse {
-  clip: rect(0 0 0 0);
-  max-height: 0;
-  position: absolute;
-  display: block;
-  overflow: hidden;
-  zoom: 1;
+    clip: rect(0 0 0 0);
+    max-height: 0;
+    position: absolute;
+    display: block;
+    overflow: hidden;
+    zoom: 1;
 }
 
 .nav-collapse.opened {
-  max-height: 9999px;
+    max-height: 9999px;
 }
-
-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-header {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  top: 0;
-}
-
 
 .nav-collapse,
 .nav-collapse * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .nav-collapse,
 .nav-collapse ul {
-  list-style: none;
-  width: 100%;
-  display: flex;
-  justify-content: end;
+    list-style: none;
+    width: auto;
+    display: flex;
+    justify-content: end;
 }
 
-.nav-collapse a {
-  text-decoration: none;
-  padding: 0.7em 1em;
-  color: black;
-  width: 100%;
-  display: block;
-}
-
-.nav-collapse ul ul a {
-  padding-left: 2em;
-}
 
 @media screen and (min-width: 768px) {
   .nav-collapse ul {
