--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@ body {
   font-style: normal;
 }
 
+*{
+  padding:0;
+  margin:0;
+
+}
 
 a:active,
 a:hover {
@@ -21,6 +26,8 @@ header{
   justify-content: space-between;
   align-items: center;
   font-size: 32px;
+  margin:0;
+  padding:0;
 }
 
 .head{
@@ -36,7 +43,7 @@ header{
 .box1{
   background-color: #8FB8DE;
   padding: 20px;
-  margin-top: 150px;
+  margin-top: 75px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   display:grid;
   place-items: center;
