--- a/css/styles_contact.css
+++ b/css/styles_contact.css
@@ -66,7 +66,7 @@ header{
   align-items:center;
   border-radius: 8px;
   box-shadow:0px 4px 8px rgba(0,0,0,0.1);
-  width: 80%;
+  width: 400px;
   margin:10px auto;
 }
 
