--- a/css/styles_contact.css
+++ b/css/styles_contact.css
@@ -119,8 +119,8 @@ footer{
   background: #8d91c7;
   color:black;
   padding: 5px;
-  position: fixed;
-  bottom: 0;
+  position: relative;
+  margin-top: -100;
 }
 
 footer p{
