--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -94,14 +94,15 @@
   margin-bottom: 50px;
 }
 
-
-footer{
-    background-color: #8d91c7;
+footer {
+    background: #8d91c7;
     color: black;
-    padding: 10px;
-    position: fixed;
+    position: relative;
     bottom: 0;
-    width: 100%;
+}
+
+footer p {
+    padding: 10px;
 }
 
 html,
