--- a/css/styles_contact.css
+++ b/css/styles_contact.css
@@ -115,17 +115,16 @@ header{
   color:black;
 }
 
-footer{
-  background: #8d91c7;
-  color:black;
-  padding: 5px;
-  position: relative;
-  margin-top: -100;
-  width: 100%;
+footer {
+    background: #8d91c7;
+    color: black;
+    position: relative;
+    bottom: 0;
+    margin-top: 100px;
 }
 
-footer p{
-  padding: 10px;
+footer p {
+    padding: 10px;
 }
 
 @font-face {
