--- a/css/styles_contact.css
+++ b/css/styles_contact.css
@@ -20,19 +20,20 @@ a:focus {
   outline: 0;
 }
 
-header{
-  background-color: #8d91c7;
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 32px;
-  margin:0;
-  padding:0;
+header {
+    background-color: #8d91c7;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 32px;
+    position: relative;
+    top: 0;
+    height: auto;
 }
 
-.head{
-  white-space: nowrap;
-  padding:10px;
+.head {
+    white-space: nowrap;
+    padding: 10px;
 }
 
 .nav-collapse .menu-item a:hover,
