--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -192,6 +192,7 @@ header {
 
 .nav-container {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   position: relative;
   align-items: flex-end;
@@ -274,6 +275,8 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         margin-bottom: 50px;
+        gap: 30px;
+        padding: 20px;
     }
 
     .photoone, .phototwo, .photothree, .photofour {
@@ -282,6 +285,8 @@ header {
         width: 250px;
         text-align: center;
         align-items: center;
+        box-shadow: 4px 4px 4px grey;
+        border-radius: 10px;
         
     }
 
@@ -290,6 +295,23 @@ header {
         height: 300px;
         object-fit: cover;
         border: solid 1px black;
+        border-radius: 10px;
+        margin-bottom: 15px;
+    }
+
+    .photoone h1, .phototwo h1, .photothree h1, .photofour h1 {
+        margin-bottom: 10px;
+        font-size: 20px;
+    }
+    
+    .photoone h2, .phototwo h2, .photothree h2, .photofour h2 {
+        margin-bottom: 10px;
+        font-size: 16px:
+        font-weight: normal;
+    }
+
+    .photoone h2, .phototwo h2, .photothree h2, .photofour h2 {
+        font-size: 16px;
     }
     
     /* nav css desktop */
