--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -20,7 +20,6 @@
     height: auto;
     padding: 20px;
     display: flex; justify-content: center;
-    box-shadow: 4px 4px 4px grey;
     border-radius: 10px;
     border: solid 1px black;
     object-fit: cover;
@@ -44,7 +43,6 @@
   height: auto;
   padding: 20px;
   display: flex; justify-content: center;
-  box-shadow: 4px 4px 4px grey;
     border-radius: 10px;
     border: solid 1px grey;
     object-fit: cover;
@@ -68,7 +66,6 @@
   height: auto;
   padding: 20px;
   display: flex; justify-content: center;
-  box-shadow: 4px 4px 4px grey;
     border-radius: 10px;
     border: solid 1px grey;
     object-fit: cover;
@@ -92,7 +89,6 @@
   height: auto;
   padding: 20px;
   display: flex; justify-content: center;
-  box-shadow: 4px 4px 4px grey;
     border-radius: 10px;
     border: solid 1px grey;
     object-fit: cover;
@@ -305,7 +301,7 @@ header {
     
     .photoone h2, .phototwo h2, .photothree h2, .photofour h2 {
         margin-bottom: 10px;
-        font-size: 16px:
+        font-size: 16px;
         font-weight: normal;
     }
 
