--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -10,6 +10,7 @@
 
 .photoone, .phototwo, .photothree, .photofour {
     width: 60%;
+    max-width: 300px;
     margin: 0 auto 20px auto;
     border-radius: 10px;
     padding: 10px;
@@ -20,7 +21,7 @@
 
 
 .photoone img, .phototwo img, .photothree img, .photofour img {
-    width: auto;
+    width: 300px;
     height: 300px;
     border-radius: 10px;
     object-fit: cover;
