--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -11,7 +11,7 @@
     text-align: center;
     background-color: #8fb8de;
     padding: 20px;
-    margin: 10px;
+    margin: 10px auto;
     box-shadow: 4px 4px 4px grey;
     border-radius: 10px;
     width: fit-content;
