--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -30,8 +30,9 @@
 
 
 .photoone img, .phototwo img, .photothree img, .photofour img {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: auto;
+    max-width: 300px
     border-radius: 10px;
     object-fit: cover;
 }
