--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -32,7 +32,8 @@
 .photoone img, .phototwo img, .photothree img, .photofour img {
     width: 100%;
     height: auto;
-    max-width: 300px
+    max-width: 300px;
+    max-height: 300px;
     border-radius: 10px;
     object-fit: cover;
 }
