--- a/css/styles_team.css
+++ b/css/styles_team.css
@@ -31,9 +31,8 @@
 
 .photoone img, .phototwo img, .photothree img, .photofour img {
     width: 100%;
-    height: auto;
+    height: 300px;
     max-width: 300px;
-    max-height: 300px;
     border-radius: 10px;
     object-fit: cover;
 }
