--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ img {
   width: 70%; 
   height: auto; 
   margin-bottom: 20px; 
+  border-radius: 10px;
 }
 .images { 
   align-self: center; 
@@ -228,9 +229,10 @@ img {
           width: 30%; 
           height: auto; 
           margin-bottom: 20px; 
+          border-radius: 10px;
         }
         .images { 
-          align-self: center; 
+          justify-content: center; 
           display: flex; 
           gap: 15px; 
           flex-direction: row;
