--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ img {
   height: auto; 
   margin-bottom: 20px; 
   border-radius: 10px;
+  box-shadow: 4px 4px 4px grey;
 }
 .images { 
   align-self: center; 
