--- a/css/styles_contact.css
+++ b/css/styles_contact.css
@@ -103,7 +103,7 @@ header {
   width: 100%;
   padding: 12px 25px;
   background:#8fb8de;
-  color: #474747;
+  color: black;
   border: none;
   border-radius: 5px;
   font-size: 18px;
